Block wrapped fix

--- a/src/sass/objects/_usermessaging.tooltip.scss
+++ b/src/sass/objects/_usermessaging.tooltip.scss
@@ -119,6 +119,13 @@
 	&.#{$ns}-has-focused-trigger {
 		overflow: visible;
 	}
+	&.#{$ns}-has-inline-trigger {
+		vertical-align: bottom;
+
+		& > *:first-child {
+			display: block;
+		}
+	}
 }
 
 .#{$ns}-positioningInline {
